# orion-CLI

./: .gitignore  CODE_REVIEW_REPORT.md  Dockerfile  README.md  agentic_output.txt  architecture.md  env.py  inference.py  openenv.yaml  orion_cli_documentation.docx  out.txt  pyproject.toml  requirements.txt  server.py  test_agentic.py  test_c09.py  test_context.py  test_output.txt  validate_output.txt
app/: models.py
orion/cli/: app.py
orion/cli/screens/: help.py  history.py  main.py  setup.py  splash.py
orion/cli/widgets/: __init__.py  chat_panel.py  file_tree.py  info_panel.py  input_bar.py
orion/config/: config.py
orion/pipeline/: agentic_loop.py  c01_intent.py  c09_validation.py  context.py  models.py  runner.py
orion/provider/: provider.py
orion/rl/: __init__.py  bandit.py  state_encoder.py
orion/session/: session.py
orion/tool/: tools.py
scripts/: preseed_bandit.py
server/: app.py
tasks/: __init__.py  task_bank.py
tests/: test_graders.py
