[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-cli"
version = "0.1.0"
description = "Orion CLI — an intelligent terminal interface"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
"summon-orion" = "orion.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orion*"]
