[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-cli"
version = "0.1.0"
description = "Orion CLI — an intelligent terminal interface"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "tomli-w>=1.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "litellm>=1.0.0",
    "httpx>=0.24.0",
    "slowapi>=0.1.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
"summon-orion" = "orion.cli.app:main"
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orion*", "tasks*"]
